BUG: Sharing selects too wide * They were set to width: 100%, which forced them too wide
QA:
* Make sure the Viewer/Contributor dropdowns in Sharing look OK

--- a/app/styles/grid-sidebar-custom.sass
+++ b/app/styles/grid-sidebar-custom.sass
@@ -503,6 +503,7 @@
         .selector.uniform
           float: right
           margin: -0.5em 0.5em 0 0
+          width: auto
 
         select.type
           width: 10em
